--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
                         </a>
                     </div>
+
+                    <!-- MitiBora Farm Africa -->
+                    <div class="client-card glass-panel">
+                        <div class="client-logo">
+                            <img src="MITIBORA.png" alt="MitiBora Farm Africa Logo">
+                        </div>
+                        <div class="client-info">
+                            <h3>MitiBora Farm Africa</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                        </div>
+                        <a href="https://ebosoh.github.io/mitibora_farm_africa/" target="_blank"
+                            class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="hero-btns fade-in-up delay-2">
