--- a/index.html
+++ b/index.html
@@ -213,6 +213,20 @@
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
                         </a>
                     </div>
+
+                    <!-- AMANI SEWAK PLASTICS -->
+                    <div class="client-card glass-panel">
+                        <div class="client-logo">
+                            <img src="AMANI.png" alt="AMANI SEWAK PLASTICS Logo">
+                        </div>
+                        <div class="client-info">
+                            <h3>AMANI SEWAK PLASTICS</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
+                        </div>
+                        <a href="#" class="btn btn-outline" onclick="return false;">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> Coming Soon
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="hero-btns fade-in-up delay-2">
