--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <!-- SWEET HOMES- BnB -->
                     <div class="client-card glass-panel">
                         <div class="client-logo">
-                            <img src="SweetHomes.jpg" alt="SWEET HOMES- BnB Logo">
+                            <img src="SweetHomes.png" alt="SWEET HOMES- BnB Logo">
                         </div>
                         <div class="client-info">
                             <h3>SWEET HOMES- BnB</h3>
@@ -371,7 +371,7 @@
                     <!-- SweetStay Application Card -->
                     <div class="portfolio-card glass-panel">
                         <div class="portfolio-logo">
-                            <img src="sweetstay_logo.png" alt="SweetStay Logo">
+                            <img src="SweetHomes.png" alt="SweetStay Logo">
                         </div>
                         <h3>SweetStay</h3>
                         <p>Modern, lightweight booking management system for Airbnbs and guest houses</p>
